--- a/movie-app/src/App.css
+++ b/movie-app/src/App.css
@@ -65,3 +65,18 @@ small{
   text-align: center;
 
 }
+form{
+  display: flex;
+  width: 100%;
+}
+input[type="text"] {
+    border-radius: 10px;
+    padding: 15px;
+}
+button{
+  padding: 15px;
+  width: 100px;
+  margin-left: 20px;
+  font-family: sans-serif;
+  font-size: 18px;
+}
