--- a/movie-app/src/App.css
+++ b/movie-app/src/App.css
@@ -66,17 +66,43 @@ small{
 
 }
 form{
-  display: flex;
-  width: 100%;
+  display: grid;
 }
-input[type="text"] {
-    border-radius: 10px;
-    padding: 15px;
+label{
+  font-size: 15px;
+  text-transform: uppercase;
+  margin-bottom: 10px;
 }
-button{
+input {
+  font-size: 15px;
+  padding-left: 20px;
   padding: 15px;
-  width: 100px;
-  margin-left: 20px;
-  font-family: sans-serif;
+  border-radius: 17px;
+  border:1px solid #ddd;
+  outline: none;
+  margin-bottom: 10px;
+}
+.button{
+  background-color: rgba(0,0,0,0.7);
+  color: #fff;
+  padding: 10px 10px;
+  border: 1pxx solid rgba(0,0,0,0.7);
+  border-radius: 18px;
   font-size: 18px;
+  outline: none;
+  cursor: pointer;
+  transition: background-color 250ms;
+}
+.button:hover{
+  background-color: rgba(0,0,0,0.85);
+}
+@media(min-width:786px) {
+  .form {
+    grid-template-columns: auto 1fr auto;
+    grid-gap: 1rem;
+    align-items: center;
+  }
+  input{
+    margin-bottom: 0;
+  }
 }
